<?xml version="1.0"?>
<package format="3">
  <name>dvrk_arm</name>
  <version>0.0.0</version>
  <description>The dvrk_arm package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="adnan@todo.todo">adnan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/dvrk_arms</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->


  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <!-- <build_depend condition="$ROS_VERSION == 1">cisst_ros_crtk</build_depend> -->
  <build_depend condition="$ROS_VERSION == 1">geometry_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">roscpp</build_depend>
  <build_depend condition="$ROS_VERSION == 1">roslib</build_depend>
  <build_depend condition="$ROS_VERSION == 1">rospy</build_depend>
  <build_depend condition="$ROS_VERSION == 1">sensor_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">std_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">tf2</build_depend>

  <build_export_depend condition="$ROS_VERSION == 1">roscpp</build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 1">roscpp</build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 1">roslib</build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 1">rospy</build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 1">sensor_msgs</build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 1">std_msgs</build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 1">tf2</build_export_depend>

  <exec_depend condition="$ROS_VERSION == 1">roscpp</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">roscpp</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">roslib</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">sensor_msgs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">std_msgs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">tf2</exec_depend>


  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend condition="$ROS_VERSION == 2">geometry_msgs</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rclpy</depend>
  <depend condition="$ROS_VERSION == 2">sensor_msgs</depend>
  <depend condition="$ROS_VERSION == 2">std_msgs</depend>
  <depend condition="$ROS_VERSION == 2">tf2</depend>


  <!-- <depend condition="$ROS_VERSION == 2">cisst_ros2_crtk</depend> -->

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
